added: a concept of accounting group and accounting

--- a/test/fixtures/general_informations.yml
+++ b/test/fixtures/general_informations.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: general_informations
+#
+#  id          :bigint           not null, primary key
+#  last_update :datetime
+#  purpose     :text
+#  status      :boolean          default(TRUE)
+#  title       :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
 one:
   title: MyString
